Fixed alignments on index; Added placestogo page

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body
 {
     height: 100vh;
     width: 100vw;
+    margin-top: 20px;
+    margin-left: 60px;
     position: absolute; 
     background: transparent;
     color: white;
@@ -61,7 +63,7 @@ body
 {
     display: inline;
     position: relative; 
-    margin: 20px;
+    margin: 12px;
     list-style-type: none;
     text-decoration: none;
     color: white;
@@ -83,7 +85,6 @@ body
 .nav-link img:hover
 {
     background-image: url(img/colosseumbg.png);
-    color:gold;
 }
 
 
@@ -169,12 +170,18 @@ body
 {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    height: 45px;
-    width: 255px;
+    font-weight: bold;
+    margin-top: 12px;
+    height: 32px;
+    width: 230px;
     background: white;
     border-radius: 40px;
-    border: none; 
-    color: #800000; 
+    border: none;
+    color: #800000;
+    -webkit-border-radius:;
+    -moz-border-radius:;
+    -ms-border-radius:;
+    -o-border-radius:;
 }
 
 .text-box button:hover
@@ -204,7 +211,7 @@ body
 
 .attractions img 
 {
-    width: 875px;
+    width: 950px;
     height: 525px;
     top: 50%;
     left: 50%;
@@ -212,7 +219,7 @@ body
     -webkit-transform: translate(40%, 8%);
     -moz-transform: translate(40%, 8%);
     -ms-transform: translate(40%, 8%);
-    -o-transform: translate(40%, 8%);
+    -o-transform: translate(40%, 8%);   
 }
 
 .attractions .container 
@@ -232,17 +239,20 @@ body
 
 .text-block h1 {
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bolder;
 }
 
-.text-block p {
+.text-block p 
+{
     font-family: 'Roboto', sans-serif;
     flex-wrap: wrap;
-    font-size: 14px;
+    font-size: 16px;
+    margin: 5px 0 12px 0;
 }
 
-.text-block button {
+.text-block button 
+{
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-weight: bold;
@@ -252,6 +262,10 @@ body
     border-radius: 40px;
     border: none;
     color: #800000;
+    -webkit-border-radius:;
+    -moz-border-radius:;
+    -ms-border-radius:;
+    -o-border-radius:;
 }
 
 .text-block button:hover {
@@ -278,11 +292,19 @@ body
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 2px;
+    margin: 35px 2px;
     background-color: darkred;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+    -webkit-transition: background-color 0.6s ease;
+    -moz-transition: background-color 0.6s ease;
+    -ms-transition: background-color 0.6s ease;
+    -o-transition: background-color 0.6s ease;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 
 .active,
@@ -331,6 +353,9 @@ body
     height: 100vh;
     width: 100%;
     background-image: url(img/pantheonbg.jpg);
+    background-position: inherit;
+    background-size: 110rem;
+    background-repeat: no-repeat;
 }
 
 .sites h1
@@ -375,7 +400,6 @@ body
     -ms-transition: 0.5s ease-in-out;
     -o-transition: 0.5s ease-in-out;
 }
-
 
 .container 
 {
@@ -478,4 +502,83 @@ footer
 {
     height: 40px;
     width: auto;
+}
+
+/* Places To Go Page*/
+
+.header-container {
+    text-align: center;
+    max-width: 960px;
+    margin: auto;
+    padding: 0 1rem 0 1rem;
+}
+
+.image-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.image-wrap img
+{
+    width: 100%;
+    height: 75vh;
+   
+}
+
+.nav-bar {
+    height: 100vh;
+    width: 100vw;
+    margin-top: 20px;
+    margin-left: 60px;
+    position: absolute;
+    background: transparent;
+    color: white;
+    z-index: 1;
+}
+
+.nav-bar a,
+li {
+    display: inline;
+    position: relative;
+    margin: 12px;
+    list-style-type: none;
+    text-decoration: none;
+    color: white;
+    font-family: 'Merriweather', serif;
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+.nav-bar a:hover {
+    opacity: .5;
+}
+
+.navlink img {
+    vertical-align: bottom;
+}
+
+.navlink img:hover {
+    background-image: url(img/colosseumbg.png);
+}
+
+.page-header h1
+{
+    font-family: 'Merriweather', serif;
+    font-weight: bolder;
+    font-size: 3rem;
+    position: absolute;
+    background: transparent;
+    color: white;
+    z-index: 1;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-125%) ;
+    -webkit-transform: translate(-50%,-125%) ;
+    -moz-transform: translate(-50%,-125%) ;
+    -ms-transform: translate(-50%,-125%) ;
+    -o-transform: translate(-50%,-125%) ;
 }
